--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "googleapis": "^148.0.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
